# gov-v1

./: .gitignore  Anchor.toml  Cargo.toml  README.md
cli/: Cargo.toml
cli/src/: cli_types.rs  consts.rs  lib.rs  main.rs  merkle.rs
cli/src/utils/: mod.rs  parsers.rs  send_utils.rs
programs/gov-v1/: Cargo.toml  README.md
programs/gov-v1/src/: constants.rs  error.rs  lib.rs  merkle_helper.rs
programs/gov-v1/src/instructions/ballot/: cast_vote.rs  finalize_ballot.rs  init_ballot_box.rs  mod.rs  remove_vote.rs  set_tie_breaker.rs
programs/gov-v1/src/instructions/program_config/: finalize_proposed_authority.rs  mod.rs  update_operator_whitelist.rs  update_program_config.rs
programs/gov-v1/src/instructions/verify/: init_meta_merkle_proof.rs  mod.rs  verify_merkle_proof.rs
programs/gov-v1/src/state/: ballot_box.rs  consensus_result.rs  finalized_ballot.rs  mod.rs  program_config.rs  proof.rs
tests/: Cargo.toml
tests/src/: test_full_program_flow.rs  test_initialize.rs
tests/src/utils/: data_types.rs  fetch_utils.rs  merkle.rs  mod.rs
verifier-service/: Cargo.toml  DEPLOYMENT.md  README.md  setup.sh
verifier-service/src/: auth_middleware.rs  indexer.rs  main.rs  metrics.rs  state.rs  types.rs  upload.rs  utils.rs
verifier-service/src/database/: constants.rs  migrator.rs  mod.rs  models.rs  operations.rs  path.rs  sql.rs
verifier-service/src/database/models/: database.rs  mod.rs  views.rs
verifier-service/src/scripts/: setup.sh
verifier-service/tests/: e2e_binary.rs
