[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[dependencies]
anchor-client = "0.31.1"
clap = { version = "4", features = ["derive"] }
meta-merkle-tree = { workspace = true }
tip-router-operator-cli = { workspace = true }
solana-accounts-db = { workspace = true }
solana-runtime = { workspace = true }
solana-program = { workspace = true }
solana-sdk = { workspace = true }
anchor-lang = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
flate2 = "1.0"
tokio = { version = "1.36.0", features = ["full"] }
anyhow = "1.0.86"
im = "15.1"
itertools = "0.11"
borsh = { version = "0.10.3" }
gov-v1 = { version = "0.1.0", path = "../programs/gov-v1" }